Updates about page image styling to prevent it from becoming too large on ultrawides

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -27,3 +27,12 @@
         width: 96%;
     }
 }
+
+@media screen and (min-width: 2400px) {
+    .about-image {
+        max-width: 1800px;
+        margin: 0 auto;
+    }
+}
+
+
